[package]
name = "ssp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
zstd = "0.13.3"
bytemuck = { version = "1.25.0", features = ['derive'] }
duckdb = { version = "1.4.4", features = ["bundled"] }
crossbeam = "0.8.4"
arrow = "56"                                                #Duckdb dep 
parquet = "56"                                              #Duckdb dep
clap = { version = "4.5.57", features = ["derive"] }
bs58 = "0.5.1"
derive_more = { version = "2.1.1", features = ["display"] }

reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
