[package]
name = "ssp-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "ssp"
path = "src/main.rs"

[dependencies]
ssp-core = { path = "../ssp-core" }
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
duckdb = { version = "1.4.4", features = ["bundled"] }
crossbeam = "0.8.4"
arrow = "56"
parquet = "56"
bs58 = "0.5.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
zstd = "0.13.3"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
